--- a/views/lpe/contenido/derecho/comentarioModal.twig
+++ b/views/lpe/contenido/derecho/comentarioModal.twig
@@ -10,10 +10,10 @@
                 <div class="well">
                     <form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'seccion' , 'idRaiz': seccion.id}) }}" method="POST">
                         <div class="form-group" style="margin-bottom:0">
-                            <label class="col-xs-1 col-sm-offset-1 text-center"><img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="margin:0 auto 5px" alt=""></label>
+                            <label class="col-xs-1 col-sm-offset-1 text-center"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="margin:0 auto 5px" alt=""></label>
                             <div class="col-xs-11 col-sm-9">
                                 <span class="text-info"><strong>{{ user.nombre }} {{ user.apellido}}</strong></span>
-                                <textarea name="cuerpo" class="form-control input-sm" rows="2" placeholder="Escriba aqui su comentario..."></textarea>
+                                <textarea name="cuerpo" class="form-control input-sm" rows="1" placeholder="Escriba aqui su comentario..." style="resize: none;"></textarea>
                                 <div class="clearfix" style="margin-top: 10px">
                                     <button type="reset" class="btn btn-default btn-xs">Cancelar</button>
                                     <button type="submit" class=" pull-right btn btn-primary btn-xs">Enviar comentario</button>
