--- a/views/lpe/registro/registro.twig
+++ b/views/lpe/registro/registro.twig
@@ -10,14 +10,14 @@ endblock %} {% block body %}
                 <form action="{{ urlFor('runCrearUsuario') }}" method="POST" class="form-horizontal" data-toggle="validator">
                     <fieldset>
                         <div class="form-group">
-                            <label for="inputEmail" class="col-md-2 control-label">Nombre</label>
+                            <label for="inputNombre" class="col-md-2 control-label">Nombre</label>
                             <div class="col-md-10">
-                                <input name="nombre" type="text"  data-error="Complete el campo con un nombre valido" pattern="^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$ placeholder="Escriba aquí su nombre" id="inputNombre" class="form-control" required>
+                                <input name="nombre" type="text"  data-error="Complete el campo con un nombre valido" pattern="^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$"" placeholder="Escriba aquí su nombre" id="inputNombre" class="form-control" required>
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputEmail" class="col-md-2 control-label">Apellido</label>
+                            <label for="inputApellido" class="col-md-2 control-label">Apellido</label>
                             <div class="col-md-10">
                                 <input name="apellido" type="text"  data-error="Complete el campo con un apellido valido" pattern="^^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$" placeholder="Escriba aquí su apellido" id="inputApellido" class="form-control" required>
                                 <div class="help-block with-errors"></div>
@@ -47,7 +47,7 @@ endblock %} {% block body %}
                             <label for="inputEmail" class="col-md-2 control-label">CAPTCHA</label>
                             <div class="col-md-10">
                                 <img src="{{ urlFor('shwCaptcha') }}?_={{ date().timestamp }}">
-                                <input type="textfield" name="captcha" class="form-control" placeholder="Ingrese el código" required>
+                                <input type="textfield" name="captcha" class="form-control" placeholder="Ingrese el código">
                             </div>
                         </div>
                         <div class="form-group text-justify">
@@ -56,12 +56,12 @@ endblock %} {% block body %}
                                 <a href="{{ urlFor('shwTos') }}"><i class="fa fa-file-text-o fa-fw"></i> Terminos y Condiciones de uso</a>                                y confirma que ha leído nuestra Política de uso de datos, incluido el uso de cookies.
                             </div>
                         </div>
-                    </fieldset> 
-                </form>
+                    </fieldset>     
                 <div class="text-center">
                     <a href="{{ urlFor('shwPortal') }}" class="btn btn-link">Volver</a>
                     <button type="submit" class="btn btn-primary">Registrarse <i class="zmdi zmdi-account-add zmdi-hc-lg zmdi-hc-fw"></i></button>
                 </div>
+                </form>
             </div>
         </div>
 
