--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -211,6 +211,10 @@ figure:hover:before {
     left: 0;
     bottom: -30%;
 }
+.cap-bot{
+    padding: 20px 0;
+    height:150px
+}
 
 .cap-bot:hover figcaption {
     bottom: 0;
@@ -228,18 +232,23 @@ background-image: -webkit-linear-gradient(top,#563d7c 0,#6f5499 100%);
 background-image: -o-linear-gradient(top,#563d7c 0,#6f5499 100%);
 background-image: linear-gradient(to bottom,#563d7c 0,#6f5499 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
-    h4{text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)}
+    h6{text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)}
     @media (max-width: $screen-xs-max) {
         width: 100%;
-        height: 150px;
+        
     }
     @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
         width: 50%;
-        height: 200px;
+        
     }
     @media (min-width: $screen-md-min) {
         width: 20%;
-        height: 200px;
+    }
+    &.w2{
+      @media (min-width: $screen-md-min) {
+        width: 20%;
+
+    }  
     }
 }
 
@@ -247,7 +256,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endC
 /* 2 columns */
 
 .grid-item--width2 {
-    width: 50%;
+    width: 20%;
 }
 
 // AJAJAJA
@@ -472,3 +481,15 @@ textarea.comentario{
     resize:none;
     }
 }
+
+#myCarousel{
+    .conoce{
+        color:#FFF; padding-top:20px; margin: 0;
+        text-shadow: 0 1px 0 rgba(0,0,0,.1);
+        
+    }
+    .embed-responsive{
+        margin: 20px 0 40px;
+    }
+}
+
