--- a/views/lpe/contenido/derecho/comentario.twig
+++ b/views/lpe/contenido/derecho/comentario.twig
@@ -7,7 +7,7 @@
     <div class="col-xs-10 col-sm-9">
         <span class="pull-left text-info" style="margin-top:0"><strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong></span>
         <br>
-        <p class="comentario">
+        <p class="comentario" style="margin-bottom:0">
             <span class="pull-right"></span>
             {{ comentario.cuerpo|nl2br }}
         </p>
@@ -27,7 +27,7 @@
         <div id="respComentario-{{comentario.id}}" class="well well" style="display:none">
             <form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'comentario', 'idRaiz': comentario.id }) }}" method="POST">
                 <div class="form-group" style="margin-bottom:0">
-                    <label class="col-xs-1 text-center"><img src="{{baseUrl()}}/assets/img/anon32.jpg" class="img-circle" style="width: 25px; margin:0 auto 5px" alt=""></label>
+                    <label class="col-xs-1 text-center"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="width: 25px; margin:0 auto 5px" alt=""></label>
                     <div class="col-xs-11">
                         <span class="text-info"><strong>{{ user.nombre }} {{ user.apellido}}</strong></span>
                         <textarea name="cuerpo" class="form-control input-sm" rows="2" placeholder="Escriba aqui su comentario..."></textarea>
@@ -52,7 +52,7 @@
                 <span class="pull-left text-info" style="margin-top:0"><strong>
                     {{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong></span>
                 <br>
-                <p class="comentario">
+                <p class="comentario" style="margin-bottom:0">
                     {{ respuesta.cuerpo|nl2br }}
                 </p>
                     {% if user %}
