--- a/views/lpe/contenido/derecho/editar.twig
+++ b/views/lpe/contenido/derecho/editar.twig
@@ -1,8 +1,7 @@
 {% extends "lpe/master.twig" %} {% block linkhead %}
 <link rel="stylesheet" href="{{ baseUrl() }}/assets-lpe/css/sceditor/sceditor-main.css"> {% endblock %} {# ----------------------------------------------------------- #} {% block titulo %}Crear derecho{% endblock
 %} {% block body %}
-<form id="crearDerecho" action="{{ urlFor('runCrearDerecho') }}" method="POST" enctype="multipart/form-data">
-
+<form id="crearDerecho" action="{{ urlFor('runModifDerecho') }}" method="POST" enctype="multipart/form-data">
     <div class="titulo-derecho-background">
         <div class="overlay">
             <div class="container">
@@ -18,20 +17,12 @@
         <div class="row">
             <div id="derecho" class="col-xs-12 col-sm-12 col-md-8 text-justify">
                 <div id="descripcion">
-                    <h3><strong>Descripción</strong></h3>
-                    <textarea name="descripcion">Escriba la descripción del derecho...</textarea>
+                    <textarea name="descripcion"></textarea>
                 </div>
                 <hr>
-                <div class="lista-acciones">
-                    <div class="accion-container">
-                        <textarea name="cuerpo" class="accion form-control" rows="1" placeholder="Describa la accion..."></textarea>
-                        <hr>
-                    </div>
-                </div>
-                <a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>
                 <div class="clearfix hidden-sm hidden-xs">
                     <a href="#" class="btn btn-large btn-default ">Cancelar</a>
-                    <button type="submit" class="btn btn-lg btn-primary pull-right">Subir nuevo derecho</button>
+                    <button type="submit" class="btn btn-lg btn-primary pull-right">Modificar derecho</button>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4">
@@ -48,29 +39,25 @@
                 </label>
                         <input type="text" class="form-control" readonly style="padding-left:10px">
                     </div>
-                    <span class="help-block">
-                La imagen se subirá cuando se suba el derecho.
-            </span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Video de Youtube</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="zmdi zmdi-youtube-play zmdi-hc-lg"></i></span>
-                        <input name="video" class="form-control" type="text" value="7uulVAHwXi0">
+                        <input name="video" class="form-control" type="text" value="{{ derecho.video }}">
                     </div>
                 </div>
                 <div class="alert alert-dismissible alert-info">
                     Debe colocar el codigo que aparece en la URL del video, luego de la porcion "?v=". Por ejemplo, de <i>https://www.youtube.com/watch?v=7uulVAHwXi0</i>
                     la porcion seria <code>7uulVAHwXi0</code><br>De ser correcto, el video tendria que mostrarse.
                 </div>
-                <h6 class="text-info"><b>Nota:</b> Las opiniones se podran cargar LUEGO que el derecho haya sido creado</h6>
             </div>
             <input type="text" name="secciones" value="" hidden>
             <input type="text" name="categoria" value="1" hidden>
             <input type="text" name="tags" value="" hidden>
              <div class="clearfix hidden-md hidden-lg">
                     <a href="#" class="btn btn-large btn-default ">Cancelar</a>
-                    <button type="submit" class="btn btn-lg btn-primary pull-right">Subir nuevo derecho</button>
+                    <button type="submit" class="btn btn-lg btn-primary pull-right">Modificar derecho</button>
                 </div>
         </div>
     </div>
@@ -83,17 +70,26 @@
     <div class="accion-container">
         <a id="eliminar-numAccion" href="javascript:void(0)" data-idaccion='numAccion' class="eliminarAccion pull-right" style="font-size:20px;"><i class="mdi mdi-close"></i></a>
         <textarea name="cuerpo" class="accion form-control" rows="1" placeholder="Describa la accion..."></textarea>
-        <br>
+        <hr>
     </div>
 </script>
 <script>
     var numeroAccion = 2;
     $(document).ready(function() {
-    //Events
-    // $("a.eliminarArticulo").on("click", eliminarArticulo);
-    autosize($('textarea'));
-    // iniciarEditor('cuerpo-1');
-    iniciarEditor('descripcion');
+        $('[name=titulo]').val('{{ derecho.titulo }}')
+        $("textarea[name=descripcion]").sceditor({
+            plugins: "bbcode",
+            emoticonsEnabled: false,
+            toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
+            height: '100',
+            width: '100%',
+            style: "{{ baseUrl() }}/assets-lpe/css/lpe.css",
+            resizeEnabled: false,
+            resizeHeight: true,
+            autoExpand: true,
+            enablePasteFiltering: true
+        }).val('{{ novedad.cuerpo|bbCode }}', false);
+         autosize($('textarea'));
 
     $(':file').on('fileselect', function(event, numFiles, label) {
         var input = $(this).parents('.input-group').find(':text'),
@@ -104,7 +100,6 @@
             input.val(log);
         }
     });
-
     $(window).keydown(function(event){
     if(event.keyCode == 13) {
       event.preventDefault();
@@ -118,26 +113,6 @@
             .attr("src", "https://www.youtube.com/embed/" + $(this).val())
             .appendTo("#youtubeVideo");
     });
-
-    $("#nuevaAccion").click(function(e) {
-        var nuevaAccion = $("#accionTemplate").html().replace(new RegExp('numAccion', 'g'), numeroAccion);
-        $(".lista-acciones").append(nuevaAccion)
-        numeroAccion += 1
-        autosize($('textarea'));
-    });
-    $(document.body).on('click', '.eliminarAccion', function() {
-        var i = $(this).data('idaccion') + 1
-        $(this).closest(".accion-container").remove();
-        for (; i <= numeroAccion + 1; i++) {
-            $('#eliminar-' + i).attr('data-idaccion', (i - 1)).attr('id', "eliminar-" + (i - 1));;
-            $("textarea[name='cuerpo-" + i + "']").attr('name', "cuerpo-" + (i - 1))
-        }
-        numeroAccion -= 1;
-    });
-    var eliminarAccion = function(e) {
-        $(this).closest(".li-accion").remove();
-    }
-
     $(document).on('change', ':file', function() {
         var input = $(this),
             numFiles = input.get(0).files ? input.get(0).files.length : 1,
@@ -156,7 +131,7 @@
             resizeHeight: true,
             autoExpand: true,
             enablePasteFiltering: true
-        });
+        }).val('{{ novedad.cuerpo|bbCode }}', false);
     }
     $( "form" ).submit(function( event ) {
         var secciones = [];        
