--- a/views/lpe/registro/reiniciar-clave.twig
+++ b/views/lpe/registro/reiniciar-clave.twig
@@ -8,7 +8,7 @@
 		<div class="panel-inicio col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 ">
 			<h2><strong>Reiniciar contraseña</strong></h2>
 			<div class="well well-lg">
-				<form action="{{ urlFor('runReiniciarClave',{'idUsu': idUsu,'token': token}) }}" method="POST" class="form-horizontal">
+				<form action="{{ urlFor('runReiniciarClave',{'idUsu': idUsu,'token': token}) }}" method="POST" class="form-horizontal" data-toggle="validator">
 					<fieldset>
 						 <div class="form-group">
                             <label for="inputPassword" class="col-md-2 control-label">Contraseña</label>
@@ -24,10 +24,10 @@
                             </div>
                         </div>
 					</fieldset>
-				</form>
 				 <div class="text-center">
                     <button type="submit" class="btn btn-primary">Reiniciar contraseña<i class="zmdi zmdi-shield-check zmdi-hc-lg zmdi-hc-fw"></i></button>
                 </div>
+				</form>
 			</div>
 		</div>
 		</div>
